# JumpRabbitGame

./: .gitignore  CMakeLists.txt  Readme.md  vcpkg.json
src/: main  main.cpp  main.h
src/entity/: Entity.h  EntityDefs.h  StaticObj.cpp  StaticObj.h
src/game/: Game.cpp  Game.h  GameDefs.h
src/input/: SdlInputManagement.cpp  SdlInputManagement.h
src/render/: Renderer.cpp  Renderer.h  RendererDefs.cpp  RendererDefs.h
src/render/model/: Model.cpp  Model.h  ModelDefs.h  Texture.cpp  Texture.h  cubeTexture.h
src/shaders/: SimpleVertexShader.glsl  colorFragmentShader.glsl
src/shaders copy/: shaderConfig.ini
